fix: Implement scroll-visibility directive for code modularity

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -1,27 +1,5 @@
 @import "../../styles.scss";
 
-@keyframes slideInLeft {
-  from {
-    transform: translateX(-100%);
-    opacity: 0;
-  }
-  to {
-    transform: translateX(0);
-    opacity: 1;
-  }
-}
-
-@keyframes slideInRight {
-  from {
-    transform: translateX(100%);
-    opacity: 0;
-  }
-  to {
-    transform: translateX(0);
-    opacity: 1;
-  }
-}
-
 .about-container {
   display: flex;
   flex-wrap: wrap;
@@ -57,13 +35,15 @@
 }
 
 .left-column.in-view {
-  display: block;
   animation: slideInLeft 1s ease-out forwards;
+  display: block;
+  opacity: 1;
 }
 
 .right-column.in-view {
-  display: block;
   animation: slideInRight 1s ease-out forwards;
+  display: block;
+  opacity: 1;
 }
 
 @media screen and (min-width: 128px) and (max-width: 900px) {
